@@ -7,6 +7,7 @@
         <version>${revision}</version>
     </parent>
 
+    <packaging>maven-plugin</packaging>
     <artifactId>redis-processor</artifactId>
     <name>redis-processor</name>
     <description>redis 缓存注解代码生成</description>
@@ -18,45 +19,25 @@
         <dependency>
             <groupId>io.github.fishlikewater</groupId>
             <artifactId>redis-core</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>com.google.auto.service</groupId>
-            <artifactId>auto-service</artifactId>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler.version}</version>
-                <configuration>
-                    <source>${maven.compiler.source.version}</source>
-                    <target>${maven.compiler.target.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <fork>true</fork>
-                    <compilerArgs>
-                        <!-- 添加 exports 选项 -->
-                        <arg>
-                            --add-exports=jdk.compiler/com.sun.tools.javac.util=raiden.redis.processor
-                        </arg>
-                        <arg>
-                            --add-exports=jdk.compiler/com.sun.tools.javac.api=raiden.redis.processor
-                        </arg>
-                        <arg>
-                            --add-exports=jdk.compiler/com.sun.tools.javac.processing=raiden.redis.processor
-                        </arg>
-                        <arg>
-                            --add-exports=jdk.compiler/com.sun.tools.javac.tree=raiden.redis.processor
-                        </arg>
-                        <arg>
-                            --add-exports=jdk.compiler/com.sun.tools.javac.model=raiden.redis.processor
-                        </arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
